--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
         
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.1.0
+        
+      - name: Install NPM dependencies
+        run: npm install
 
       - name: Deploy static site to S3 bucket
         run: npm run deploy
