--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,8 @@ jobs:
       - name: Install NPM dependencies
         run: npm install
 
+      - name: Build project
+        run: npm run build
+
       - name: Deploy static site to S3 bucket
         run: npm run deploy
